# asananas

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  allocation.html  conda_test_prod.yml  dummy_data.pkl  environment.yml  pyproject.toml  requirements.txt  test_dashboard.py
asananas/: allocation_management.py  asana_connector.py  asana_linear_bridge.py  linear_connector.py
asananas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
asananas/assets/: demo_fig.html
asananas/dashboard/: cli.py  main.py  main2.py
scripts/: create_dummy_polt.py  dummy_data.pkl
