[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asananas"
description = "Asananas helps you with your project management in Asana."
readme = "README.md"
authors = [
  {"name" = "Christian Brendel", "email" = "brendel.chris@gmail.com"},
]
license = { file = "LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["asana", "project-management", "dashboard", "linear"]
dependencies = [
    "asana",
    "requests",
    "loguru",
    "pandas",
    "streamlit",
    "plotly"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "ipykernel",
    "nbformat>=4.2.0",
    "isort",
    "pre-commit",
    "pydocstyle"
]

[tool.setuptools]
packages = ["asananas"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "asananas._version.__version__"}

[project.urls]
Homepage = "https://github.com/christianbrendel/asananas"

[project.scripts]
asananas-sync-linear = "asananas.asana_linear_bridge:main"
asananas-allocation = "asananas.allocation_management:main"
asananas-dashboard = "asananas.dashboard.cli:run"
